# Django_pr

./: .env.sample  README.md  category_fixture.json  dump.rdb  groups.json  product_fixture.json  pyproject.toml  requirements.txt
blog/: admin.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_entry_is_active.py  0003_entry_view_counter.py
blog/templates/blog/: base.html  entry_delete.html  entry_detail.html  entry_form.html  entry_list.html
catalog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
catalog/management/commands/: load_category_fixture.py  load_product_fixture.py  to_truncate.py
catalog/migrations/: 0001_initial.py  0002_alter_product_category.py  0003_alter_category_options.py  0004_alter_product_options.py  0005_alter_product_image.py  0006_alter_product_options.py  0007_product_is_published.py  0008_product_owner.py
catalog/templates/: 403.html  products_by_category.html
catalog/templates/catalog/: base.html  contacts.html  home.html  product_delete.html  product_detail.html  product_details.html  product_form.html  product_form_old.html  product_list.html  to_add_product.html
config/: settings.py  urls.py
users/: admin.py  forms.py  models.py  urls.py  views.py
users/management/commands/: createadmin.py
users/migrations/: 0001_initial.py
users/templates/users/: base.html  login.html  register.html  update.html
