[tool.poetry]
name = "django-pr"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.2.1"
psycopg2 = "^2.9.10"
dotenv = "^0.9.9"
ipython = "^9.3.0"
pillow = "^11.2.1"
django-countries = "^7.6.1"
django-phonenumber-field = {extras = ["phonenumbers"], version = "^8.1.0"}
python-decouple = "^3.8"
redis = "^6.3.0"
isort = "^6.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
